style: page layout

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,10 @@ body {
 a {
   text-decoration: none;
 }
+
+.page {
+  width: var(--view-width);
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding: 5rem 2rem;
+}
