--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,12 @@
 :root {
   --primary: #81689D;
   --secondary: #474F7A;
+  --secondary-600: #424970;
   --pink: #FFD0EC;
   --dark: #1F2544;
   --white: #f8fafc;
   --black: #121212;
+  --grey: #6b7280;
 
   --view-width: 90vw;
   --max-width: 1120px;
