--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,16 @@
 }
 
 :root {
-  --primary: #81689D;
-  --secondary: #474F7A;
+  --primary: #81689d;
+  --secondary: #474f7a;
   --secondary-600: #424970;
-  --pink: #FFD0EC;
-  --dark: #1F2544;
+  --pink: #ffd0ec;
+  --dark: #1f2544;
   --white: #f8fafc;
   --black: #121212;
   --grey: #6b7280;
+  --border-gray: #f9fafb;
+  --bg-gray: #f3f4f6;
 
   --view-width: 90vw;
   --max-width: 1120px;
@@ -29,10 +31,108 @@ a {
   text-decoration: none;
 }
 
+h1 {
+  font-size: clamp(2rem, 5vw, 5rem); /* Large heading */
+}
+
+h2 {
+  font-size: clamp(1.5rem, 3vw, 3rem); /* Medium heading */
+}
+
+h3 {
+  font-size: clamp(1.25rem, 2.5vw, 2.5rem); /* Small heading */
+}
+
+h4 {
+  font-size: clamp(1rem, 2vw, 2rem); /* Extra small heading */
+}
+
+h5 {
+  font-size: clamp(0.875rem, 1.5vw, 1.5rem); /* Tiny heading */
+}
+
+/* BIGGER FONTS */
+/* h1 {
+  font-size: clamp(3rem, 6vw, 6rem);
+}
+
+h2 {
+  font-size: clamp(2.5rem, 5vw, 5rem);
+}
+
+h3 {
+  font-size: clamp(2rem, 4vw, 4rem);
+}
+
+h4 {
+  font-size: clamp(1.5rem, 3vw, 3rem);
+}
+
+h5 {
+  font-size: clamp(1rem, 2vw, 2rem);
+}
+ */
+
 .img {
   width: 100%;
   display: block;
   object-fit: cover;
+}
+
+.btn {
+  cursor: pointer;
+  color: var(--white);
+  border-color: transparent;
+  background: var(--secondary);
+  border: transparent;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  /* padding: 0.375rem 0.75rem; */
+  padding: 0.5rem 1rem;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition: all 0.3s ease;
+  text-transform: capitalize;
+  display: inline-block;
+  text-transform: capitalize;
+}
+.btn:hover {
+  background: var(--secondary-600);
+}
+
+.btn-block {
+  width: 100%;
+}
+
+.form {
+  width: 100%;
+  max-width: var(--fixed-width);
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  padding: 2rem 2.5rem;
+  margin: 3rem auto;
+}
+
+.form-label {
+  display: block;
+  font-size: 0.875rem;
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  border-radius: 3px;
+  background: var(--bg-gray);
+  border: 1px solid var(--border-gray);
+}
+
+::placeholder {
+  font-family: inherit;
+  color: var(--grey-400);
 }
 
 .page {
@@ -43,21 +143,21 @@ a {
 }
 
 .loader {
-  border: 4px solid rgba(0, 0, 0, .1);
+  border: 4px solid rgba(0, 0, 0, 0.1);
   border-left-color: transparent;
   border-radius: 50%;
   margin: auto;
 }
 
 .loader {
-  border: 4px solid rgba(0, 0, 0, .1);
+  border: 4px solid rgba(0, 0, 0, 0.1);
   border-left-color: transparent;
   width: 36px;
   height: 36px;
 }
 
 .loader {
-  border: 4px solid rgba(0, 0, 0, .1);
+  border: 4px solid rgba(0, 0, 0, 0.1);
   border-left-color: transparent;
   width: 36px;
   height: 36px;
