submit button state

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@ a {
   text-decoration: none;
 }
 
+button:disabled {
+  opacity: 0.8;
+  cursor: not-allowed;
+}
+
 h1 {
   font-size: clamp(2rem, 5vw, 5rem); /* Large heading */
 }
